[package]
name = "chain_extension_contract"
version = "0.1.0"
authors = ["NeoPower Digital <contact@neopower.digital>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

random_crate = { path = "../random_crate", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "random_crate/std"]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false
[profile.dev]
overflow-checks = false
