[package]
name = "random_crate"
version = "0.1.0"
authors = ["NeoPower Digital <contact@neopower.digital>"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
ink_e2e = "4.3"

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false
[profile.dev]
overflow-checks = false
