[package]
name = "updated_incrementer"
version = "0.1.0"
authors = ["NeoPower Digital <contact@neopower.digital>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
